--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -2,8 +2,12 @@
   <div id="instructions">
     <span style="font-size:40px">Click to play</span>
     <br />
-    (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
-  </div>
+    (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)<br>
+    (1 -> )<br>
+    (2 -> )<br>
+    (3 -> )<br>
+    (4 -> )<br>
+    </div>
 </div>
 <div id="infoBox" title="Demo Information" style=" ">
 This is a demo, part of a collection at
@@ -132,7 +136,7 @@ animate();
 
 function init() {
   camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
-  camera.translateY(5);
+  camera.translateY(3);
 
   var geometry1 = new THREE.Geometry();
   var material1 = new THREE.LineBasicMaterial({ color: 0x1B1722 });
@@ -958,7 +962,13 @@ function onMouseDown() {
                              intersects[0].object.name.country+"<br><br>"+
                              intersects[0].object.name.denomination+"<br><br>"
                              ) // sets text to empty
+        $( "#infoBox" ).dialog({
+          position: { my: "center center", at: "right center"},
+          
+        });
         $("#infoBox").dialog("open");
+
+        
           coinPreview = scene.getObjectByName("Coin");
           coinShaderPreview = scene.getObjectByName("CoinShader");
           
