--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -3,6 +3,8 @@
     <span style="font-size:40px">Click to play</span>
     <br />
     (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)<br>
+    (C = Close info of coins )<br>
+    (R = Reset values)<br>
     (1 -> Down bloomAmount)<br>
     (2 -> Up bloomAmount )<br>
     (3 -> Down sunLight )<br>
